--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1" />
     	<meta name="author" content="Marllon Frizzo" />
     	<meta name="title" content="Marllon Frizzo" />
-		<meta name="description" content="Nada de interessante" />
+		<meta name="description" content="Minha página pessoal" />
 		<link rel="icon" href="img/favicon.png" type="image/png" />
 		<link rel="shortcut icon" href="img/favicon.png" type="image/png" />
 		
@@ -21,10 +21,18 @@
 				margin: 10% auto 0;
 				font-size: 20px;
 			}
-			a{
-				letter-spacing: 5px;
-			}
 		</style>
+
+		<script>
+	  		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	  		ga('create', 'UA-61529437-2', 'auto');
+	  		ga('send', 'pageview');
+		</script>
+		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous" />
 		
 		<meta property="og:title" content="Marllon Frizzo" />
 		<meta property="og:description" content="Nada de interessante" />
@@ -40,19 +48,9 @@
 		<div class="container-fluid">
 			<img src="img/mf.jpg" alt="Marllon Frizzo">
 			<p>Seja bem-vindo!</p><br>
-			<a href="http://www.twitter.com/marllonfrizzo"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
-			<a href="http://www.last.fm/pt/user/marllonfrizzo"><i class="fa fa-lastfm fa-lg" aria-hidden="true"></i></a>
-			<a href="https://github.com/marllonfrizzo"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+			<p><a href="https://twitter.com/marllonfrizzo">Twitter</a> |
+			<a href="https://www.last.fm/pt/user/marllonfrizzo">Last.fm</a> |
+			<a href="https://github.com/marllonfrizzo">Github</a></p>
 		</div>
-		<script>
-	  		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	  		ga('create', 'UA-61529437-2', 'auto');
-	  		ga('send', 'pageview');
-		</script>
-		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous" />
 	</body>
 </html>
