--- a/index.html
+++ b/index.html
@@ -1,56 +1,129 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="utf-8" />
-		<title>Marllon Frizzo</title>
-		<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    	<meta name="viewport" content="width=device-width, initial-scale=1" />
-    	<meta name="author" content="Marllon Frizzo" />
-    	<meta name="title" content="Marllon Frizzo" />
-		<meta name="description" content="Minha página pessoal" />
-		<link rel="icon" href="img/favicon.png" type="image/png" />
-		<link rel="shortcut icon" href="img/favicon.png" type="image/png" />
-		
-		<style type="text/css">
-			*{
-    			font-family: 'Lato', sans-serif;
-			}
-			.container-fluid{
-				text-align: center;
-				margin: 10% auto 0;
-				font-size: 20px;
-			}
-		</style>
 
-		<script>
-	  		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	  		ga('create', 'UA-61529437-2', 'auto');
-	  		ga('send', 'pageview');
-		</script>
-		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous" />
-		
-		<meta property="og:title" content="Marllon Frizzo" />
-		<meta property="og:description" content="Nada de interessante" />
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="http://www.mfrizzo.com.br/" />
-		<meta property="og:image" content="http://mfrizzo.com.br/img/mf.jpg" />
+<head>
 
-		<meta name="twitter:card" content="summary" />
-		<meta name="twitter:site" content="@marllonfrizzo" />
-		<meta name="twitter:creator" content="@marllonfrizzo" />
-	</head>
-	<body>
-		<div class="container-fluid">
-			<img src="img/mf.jpg" alt="Marllon Frizzo">
-			<p>Seja bem-vindo!</p><br>
-			<p><a href="https://twitter.com/marllonfrizzo">Twitter</a> |
-			<a href="https://www.last.fm/pt/user/marllonfrizzo">Last.fm</a> |
-			<a href="https://github.com/marllonfrizzo">Github</a></p>
-		</div>
-	</body>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Minha página pessoal">
+  <meta name="author" content="Marllon Frizzo">
+
+  <title>Página pessoal do Marllon Frizzo</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom fonts for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
+  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/resume.min.css" rel="stylesheet">
+
+  <link rel="icon" href="img/favicon.png" type="image/png" />
+  <link rel="shortcut icon" href="img/favicon.png" type="image/png" />
+
+</head>
+
+<body id="page-top">
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <span class="d-block d-lg-none">Start Bootstrap</span>
+      <span class="d-none d-lg-block">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+      </span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#about">Início</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#experience">Sobre</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="container-fluid p-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
+      <div class="my-auto">
+        <h1 class="mb-0">Marllon
+          <span class="text-primary">Frizzo</span>
+        </h1>
+        <div class="subheading mb-5">Paraná · Brasil ·
+          <a href="mailto:marllon@mfrizzo.com.br">marllon@mfrizzo.com.br</a>
+        </div>
+        <p class="mb-5">
+          Seja bem-vindo(a)!
+          <br /> Essa página é experimental, nela você irá encontrar para as minhas redes sociais.
+        </p>
+        <ul class="list-inline list-social-icons mb-0">
+          <li class="list-inline-item">
+            <a href="https://www.fb.com/marllon.frizzo.9">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://www.twitter.com/marllonfrizzo">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://www.github.com/marllonfrizzo">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://www.last.fm/pt/user/marllonfrizzo">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-lastfm fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+      <div class="my-auto">
+        <h2 class="mb-5">Sobre</h2>
+
+        <p>Template disponibilizado por
+          <a href="https://startbootstrap.com/template-overviews/resume/">startbootstrap</a>.</p>
+      </div>
+    </section>
+  </div>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/resume.min.js"></script>
+
+</body>
+
 </html>
