Configuração básica da otimização do compartilhamento no Facebook

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
   <link rel="icon" href="img/favicon.png" type="image/png" />
   <link rel="shortcut icon" href="img/favicon.png" type="image/png" />
 
+  <meta property="og:url" content="https://www.mfrizzo.com.br/" />
+  <meta property="og:title" content="Página pessoal do Marllon Frizzo" />
+  <meta property="og:locale" content="pt-br" />
 </head>
 
 <body id="page-top">
