--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <meta property="og:url" content="https://www.mfrizzo.com.br/" />
   <meta property="og:title" content="Página pessoal do Marllon Frizzo" />
   <meta property="og:locale" content="pt-br" />
+  <meta property="og:image" content="img/img-fb.png" />
 </head>
 
 <body id="page-top">
