--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <meta property="og:title" content="Página pessoal do Marllon Frizzo" />
   <meta property="og:locale" content="pt-br" />
   <meta property="og:image" content="img/img-fb.png" />
+  <meta property="og:image:type" content="image/png" />
 </head>
 
 <body id="page-top">
