--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <meta property="og:url" content="https://www.mfrizzo.com.br/" />
   <meta property="og:title" content="Página pessoal do Marllon Frizzo" />
   <meta property="og:locale" content="pt-br" />
-  <meta property="og:image" content="https://www.mfrizzo.com.br/img/img-fb.png" />
+  <meta property="og:image" content="http://www.mfrizzo.com.br/img/img-fb.png" />
   <meta property="og:image:type" content="image/png" />
 </head>
 
