Correção no texto de apresentação

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <p class="mb-5">
           Seja bem-vindo(a)!
-          <br /> Essa página é experimental, nela você irá encontrar para as minhas redes sociais.
+          <br /> Essa página é experimental, nela você irá encontrar links para as minhas redes sociais.
         </p>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
